minor fixes, like training quiz scores and spacing of headers

--- a/react-app/src/pages/AdminVolunteerDetails/AdminVolunteerDetails.module.css
+++ b/react-app/src/pages/AdminVolunteerDetails/AdminVolunteerDetails.module.css
@@ -93,6 +93,7 @@
 
 .text {
   color: var(--blue-gray);
+  margin-top: 0.3rem;
 }
 
 .buttonContainer{
